--- a/Prayers/StJoseph/Prayers.StJoseph.UWP/Prayers.StJoseph.UWP.csproj
+++ b/Prayers/StJoseph/Prayers.StJoseph.UWP/Prayers.StJoseph.UWP.csproj
@@ -98,6 +98,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderer\LabelExtendedRenderer.cs" />
+    <Compile Include="Services\AudioPlayerService.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -160,6 +161,9 @@
     <PackageReference Include="Syncfusion.Xamarin.Core">
       <Version>23.1.39</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfProgressBar">
+      <Version>23.1.39</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.12" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
@@ -169,6 +173,11 @@
       <Project>{263578ae-ff9c-4304-b7e1-526864052b6a}</Project>
       <Name>Prayers</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\..\..\Resources\St Joseph Prayer.csv">
+      <Link>Assets\St Joseph Prayer.csv</Link>
+    </Content>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
