--- a/Prayers/StJoseph/Prayers.StJoseph.Android/Prayers.StJoseph.Android.csproj
+++ b/Prayers/StJoseph/Prayers.StJoseph.Android/Prayers.StJoseph.Android.csproj
@@ -67,6 +67,9 @@
     <PackageReference Include="Syncfusion.Xamarin.Core">
       <Version>23.1.39</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfProgressBar">
+      <Version>23.1.39</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
@@ -75,6 +78,7 @@
     <Compile Include="Renderer\LabelExtendedRenderer.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AudioPlayerService.cs" />
     <Compile Include="Services\LocalFileStorageService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -112,6 +116,16 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\mainpic.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Page01_Female.mp3">
+      <Link>Assets\Page01_Female.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Page02_Male.mp3">
+      <Link>Assets\Page02_Male.mp3</Link>
+    </AndroidAsset>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
