--- a/Prayers/StJoseph/Prayers.StJoseph.Android/Prayers.StJoseph.Android.csproj
+++ b/Prayers/StJoseph/Prayers.StJoseph.Android/Prayers.StJoseph.Android.csproj
@@ -70,16 +70,21 @@
     <PackageReference Include="Syncfusion.Xamarin.SfProgressBar">
       <Version>23.1.39</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2622" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\LinkFiles\Droid\AudioPlayerService.cs">
+      <Link>Services\AudioPlayerService.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\LinkFiles\Droid\LocalFileStorageService.cs">
+      <Link>Services\LocalFileStorageService.cs</Link>
+    </Compile>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Renderer\LabelExtendedRenderer.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\AudioPlayerService.cs" />
-    <Compile Include="Services\LocalFileStorageService.cs" />
+    <Compile Include="Services\DataSourceService.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="..\..\..\Resources\St Joseph Prayer.csv">
