--- a/Prayers/StJoseph/Prayers.StJoseph.UWP/Prayers.StJoseph.UWP.csproj
+++ b/Prayers/StJoseph/Prayers.StJoseph.UWP/Prayers.StJoseph.UWP.csproj
@@ -90,6 +90,15 @@
     <UseDotNetNativeToolchain>true</UseDotNetNativeToolchain>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\LinkFiles\Uwp\AudioPlayerService.cs">
+      <Link>Services\AudioPlayerService.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\LinkFiles\Uwp\ConfigHelper.cs">
+      <Link>Services\ConfigHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\LinkFiles\Uwp\LocalFileStorageService.cs">
+      <Link>Services\LocalFileStorageService.cs</Link>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -97,8 +106,9 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderer\AspectImageRenderer.cs" />
     <Compile Include="Renderer\LabelExtendedRenderer.cs" />
-    <Compile Include="Services\AudioPlayerService.cs" />
+    <Compile Include="Services\DataSourceService.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -106,6 +116,9 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="..\..\..\Resources\StJoseph\mainpic.jpg">
+      <Link>Assets\mainpic.jpg</Link>
+    </Content>
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LargeTile.scale-100.png" />
     <Content Include="Assets\LargeTile.scale-200.png" />
@@ -164,9 +177,9 @@
     <PackageReference Include="Syncfusion.Xamarin.SfProgressBar">
       <Version>23.1.39</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2622" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.12" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Prayers\Prayers.csproj">
@@ -177,6 +190,11 @@
   <ItemGroup>
     <Content Include="..\..\..\Resources\St Joseph Prayer.csv">
       <Link>Assets\St Joseph Prayer.csv</Link>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\..\..\LinkFiles\CommonConfigs.json">
+      <Link>Assets\CommonConfigs.json</Link>
     </Content>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
