--- a/Prayers/StJoseph/Prayers.StJoseph.iOS/Prayers.StJoseph.iOS.csproj
+++ b/Prayers/StJoseph/Prayers.StJoseph.iOS/Prayers.StJoseph.iOS.csproj
@@ -72,9 +72,6 @@
     <Compile Include="Services\AudioPlayerService.cs" />
     <Compile Include="Services\DataSourceService.cs" />
     <Compile Include="Services\LocalFileStorageService.cs" />
-    <None Include="..\..\..\Resources\St Joseph Prayer.csv">
-      <Link>St Joseph Prayer.csv</Link>
-    </None>
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -132,6 +129,9 @@
     <BundleResource Include="Resources\xamarin_logo%402x.png" />
     <BundleResource Include="Resources\xamarin_logo%403x.png" />
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
+    <BundleResource Include="..\..\..\Resources\St Joseph Prayer.csv">
+      <Link>St Joseph Prayer.csv</Link>
+    </BundleResource>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
