droid changes for images

--- a/Prayers/StJoseph/Prayers.StJoseph.iOS/Prayers.StJoseph.iOS.csproj
+++ b/Prayers/StJoseph/Prayers.StJoseph.iOS/Prayers.StJoseph.iOS.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="Renderer\LabelExtendedRenderer.cs" />
+    <Compile Include="Services\AppInformation.cs" />
     <Compile Include="Services\AudioPlayerService.cs" />
     <Compile Include="Services\DataSourceService.cs" />
     <Compile Include="Services\LocalFileStorageService.cs" />
