--- a/Prayers/Prayers/Prayers.csproj
+++ b/Prayers/Prayers/Prayers.csproj
@@ -1,52 +1,55 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
-    <ProduceReferenceAssemblyInOutDir>true</ProduceReferenceAssemblyInOutDir>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+		<ProduceReferenceAssemblyInOutDir>true</ProduceReferenceAssemblyInOutDir>
+		<LangVersion>latest</LangVersion>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Fonts\Font Awesome 5 Free-Solid-900.otf" />
-    <None Remove="Fonts\Kartika.ttf" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove="Fonts\Font Awesome 5 Free-Solid-900.otf" />
+		<None Remove="Fonts\Kartika.ttf" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Include="Fonts\Font Awesome 5 Free-Solid-900.otf" />
-    <EmbeddedResource Include="Fonts\Kartika.ttf" />
-  </ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Include="Fonts\Font Awesome 5 Free-Solid-900.otf" />
+		<EmbeddedResource Include="Fonts\Kartika.ttf" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MagicGradients" Version="1.3.1" />
-    <PackageReference Include="Pj.Library" Version="1.0.4.28" />
-    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="23.1.39" />
-    <PackageReference Include="Syncfusion.Xamarin.Core" Version="23.1.39" />
-    <PackageReference Include="Syncfusion.Xamarin.SfProgressBar" Version="23.1.39" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2622" />  
-    <PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="MagicGradients" Version="1.3.1" />
+		<PackageReference Include="Microsoft.AppCenter.Analytics" Version="5.0.3" />
+		<PackageReference Include="Microsoft.AppCenter.Crashes" Version="5.0.3" />
+		<PackageReference Include="Pj.Library" Version="1.0.4.28" />
+		<PackageReference Include="Syncfusion.Xamarin.Buttons" Version="23.1.39" />
+		<PackageReference Include="Syncfusion.Xamarin.Core" Version="23.1.39" />
+		<PackageReference Include="Syncfusion.Xamarin.SfProgressBar" Version="23.1.39" />
+		<PackageReference Include="Xamarin.Forms" Version="5.0.0.2622" />
+		<PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Compile Update="Controls\ParaBulletView.xaml.cs">
-      <DependentUpon>ParaBulletView.xaml</DependentUpon>
-    </Compile>
-    <Compile Update="Controls\ParaImageView.xaml.cs">
-      <DependentUpon>ParaImageView.xaml</DependentUpon>
-    </Compile>
-    <Compile Update="Controls\ParaHeaderView.xaml.cs">
-      <DependentUpon>ParaHeaderView.xaml</DependentUpon>
-    </Compile>
-    <Compile Update="Controls\ParaContentView.xaml.cs">
-      <DependentUpon>ParaContentView.xaml</DependentUpon>
-    </Compile>
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Update="Controls\ParaBulletView.xaml.cs">
+			<DependentUpon>ParaBulletView.xaml</DependentUpon>
+		</Compile>
+		<Compile Update="Controls\ParaImageView.xaml.cs">
+			<DependentUpon>ParaImageView.xaml</DependentUpon>
+		</Compile>
+		<Compile Update="Controls\ParaHeaderView.xaml.cs">
+			<DependentUpon>ParaHeaderView.xaml</DependentUpon>
+		</Compile>
+		<Compile Update="Controls\ParaContentView.xaml.cs">
+			<DependentUpon>ParaContentView.xaml</DependentUpon>
+		</Compile>
+	</ItemGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Update="Views\MainView.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Views\PrayerView.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
-  </ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Update="Views\MainView.xaml">
+			<Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Views\PrayerView.xaml">
+			<Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+		</EmbeddedResource>
+	</ItemGroup>
 </Project>
