--- a/Prayers/StJoseph/Prayers.StJoseph.Android/Properties/AndroidManifest.xml
+++ b/Prayers/StJoseph/Prayers.StJoseph.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.prayers">
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
-    <application android:label="Prayers.Android" android:theme="@style/MainTheme"></application>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" 
+		  android:versionName="1.0" package="com.pj.stjosephnovenamalayalam" android:installLocation="preferExternal">
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
+	<application android:label="St. Joseph Novena (Malayalam)" android:theme="@style/MainTheme" android:icon="@mipmap/icon"
+				 android:fullBackupContent="@xml/appcenter_backup_rule">
+	</application>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
