--- a/Prayers/StJoseph/Prayers.StJoseph.iOS/Info.plist
+++ b/Prayers/StJoseph/Prayers.StJoseph.iOS/Info.plist
@@ -23,16 +23,22 @@
     <key>MinimumOSVersion</key>
     <string>8.0</string>
     <key>CFBundleDisplayName</key>
-    <string>Prayers</string>
+    <string>St Joseph Novena Malayalam</string>
     <key>CFBundleIdentifier</key>
-    <string>com.companyname.Prayers</string>
+    <string>com.pj.stjosephnovenamalayalam</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>CFBundleName</key>
-    <string>Prayers</string>
+    <string>St Joseph Novena Malayalam</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
+    <key>UIMainStoryboardFile</key>
+	<string>SplashScreen</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
