ios failed build

--- a/Prayers/StJoseph/Prayers.StJoseph.iOS/Prayers.StJoseph.iOS.csproj
+++ b/Prayers/StJoseph/Prayers.StJoseph.iOS/Prayers.StJoseph.iOS.csproj
@@ -82,6 +82,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include=".DS_Store" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
