--- a/Prayers/StJoseph/Prayers.StJoseph.Android/Prayers.StJoseph.Android.csproj
+++ b/Prayers/StJoseph/Prayers.StJoseph.Android/Prayers.StJoseph.Android.csproj
@@ -48,6 +48,20 @@
     <WarningLevel>4</WarningLevel>
     <AndroidManagedSymbols>true</AndroidManagedSymbols>
     <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
+    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <BundleAssemblies>false</BundleAssemblies>
+    <AndroidLinkMode>None</AndroidLinkMode>
+    <AndroidPackageFormat>aab</AndroidPackageFormat>
+    <AndroidUseAapt2>true</AndroidUseAapt2>
+    <AndroidCreatePackagePerAbi>false</AndroidCreatePackagePerAbi>
+    <AndroidKeyStore>true</AndroidKeyStore>
+    <AndroidSigningKeyStore>D:\Pro\Prayers\Resources\catholicsaints.keystore</AndroidSigningKeyStore>
+    <AndroidSigningStorePass>CatholicSaintsPassword@01</AndroidSigningStorePass>
+    <AndroidSigningKeyAlias>keyalias.alias</AndroidSigningKeyAlias>
+    <AndroidSigningKeyPass>CatholicSaintsPassword@01</AndroidSigningKeyPass>
+    <AndroidEnableMultiDex>false</AndroidEnableMultiDex>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
