--- a/Prayers/StJoseph/Prayers.StJoseph.iOS/Info.plist
+++ b/Prayers/StJoseph/Prayers.StJoseph.iOS/Info.plist
@@ -42,5 +42,13 @@
 	<string>1.0</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconName</key>
+			<string>AppIcon</string>
+		</dict>
+	</dict>
 </dict>
 </plist>
