--- a/Prayers/StJoseph/Prayers.StJoseph.Android/Prayers.StJoseph.Android.csproj
+++ b/Prayers/StJoseph/Prayers.StJoseph.Android/Prayers.StJoseph.Android.csproj
@@ -135,16 +135,6 @@
     <AndroidResource Include="Resources\drawable\mainpic.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Page01_Female.mp3">
-      <Link>Assets\Page01_Female.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Page02_Male.mp3">
-      <Link>Assets\Page02_Male.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
     <AndroidResource Include="Resources\values-land\colors.xml">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
       <SubType>Designer</SubType>
@@ -218,6 +208,96 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\splash_logo_land.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page1 - Content1.mp3">
+      <Link>Assets\Page1 - Content1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page1 - Content2.mp3">
+      <Link>Assets\Page1 - Content2.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page2 - Content1.mp3">
+      <Link>Assets\Page2 - Content1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page3 - Content1.mp3">
+      <Link>Assets\Page3 - Content1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page3 - Content2.mp3">
+      <Link>Assets\Page3 - Content2.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page4 - Content1.mp3">
+      <Link>Assets\Page4 - Content1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page4 - Content2.mp3">
+      <Link>Assets\Page4 - Content2.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page4 - Content3.mp3">
+      <Link>Assets\Page4 - Content3.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page4 - Content4.mp3">
+      <Link>Assets\Page4 - Content4.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page4 - Content5.mp3">
+      <Link>Assets\Page4 - Content5.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page4 - Content6.mp3">
+      <Link>Assets\Page4 - Content6.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page5 - Content1.mp3">
+      <Link>Assets\Page5 - Content1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page5 - Content2.mp3">
+      <Link>Assets\Page5 - Content2.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page6 - Content1.mp3">
+      <Link>Assets\Page6 - Content1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page7 - Content1.mp3">
+      <Link>Assets\Page7 - Content1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page7 - Content2.mp3">
+      <Link>Assets\Page7 - Content2.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page8 - Content1.mp3">
+      <Link>Assets\Page8 - Content1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page9 - Content1.mp3">
+      <Link>Assets\Page9 - Content1.mp3</Link>
+    </AndroidAsset>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
