--- a/Prayers/StJoseph/Prayers.StJoseph.Android/Prayers.StJoseph.Android.csproj
+++ b/Prayers/StJoseph/Prayers.StJoseph.Android/Prayers.StJoseph.Android.csproj
@@ -299,5 +299,20 @@
       <Link>Assets\Page9 - Content1.mp3</Link>
     </AndroidAsset>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\page test1.mp3">
+      <Link>Assets\page test1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\page test2.mp3">
+      <Link>Assets\page test2.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\page test3.mp3">
+      <Link>Assets\page test3.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
