--- a/Prayers/StJoseph/Prayers.StJoseph.Android/Prayers.StJoseph.Android.csproj
+++ b/Prayers/StJoseph/Prayers.StJoseph.Android/Prayers.StJoseph.Android.csproj
@@ -112,11 +112,11 @@
     <Compile Include="Services\AppInformation.cs" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\St Joseph Prayer.csv">
-      <Link>Assets\St Joseph Prayer.csv</Link>
-    </AndroidAsset>
     <AndroidAsset Include="..\..\..\LinkFiles\CommonConfigs.json">
       <Link>Assets\CommonConfigs.json</Link>
+    </AndroidAsset>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Data\St Joseph Prayer.csv">
+      <Link>Assets\St Joseph Prayer.csv</Link>
     </AndroidAsset>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
@@ -195,96 +195,6 @@
     <AndroidResource Include="Resources\drawable\splash_logo_land.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page1 - Content1.mp3">
-      <Link>Assets\Page1 - Content1.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page1 - Content2.mp3">
-      <Link>Assets\Page1 - Content2.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page2 - Content1.mp3">
-      <Link>Assets\Page2 - Content1.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page3 - Content1.mp3">
-      <Link>Assets\Page3 - Content1.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page3 - Content2.mp3">
-      <Link>Assets\Page3 - Content2.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page4 - Content1.mp3">
-      <Link>Assets\Page4 - Content1.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page4 - Content2.mp3">
-      <Link>Assets\Page4 - Content2.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page4 - Content3.mp3">
-      <Link>Assets\Page4 - Content3.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page4 - Content4.mp3">
-      <Link>Assets\Page4 - Content4.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page4 - Content5.mp3">
-      <Link>Assets\Page4 - Content5.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page4 - Content6.mp3">
-      <Link>Assets\Page4 - Content6.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page5 - Content1.mp3">
-      <Link>Assets\Page5 - Content1.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page5 - Content2.mp3">
-      <Link>Assets\Page5 - Content2.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page6 - Content1.mp3">
-      <Link>Assets\Page6 - Content1.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page7 - Content1.mp3">
-      <Link>Assets\Page7 - Content1.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page7 - Content2.mp3">
-      <Link>Assets\Page7 - Content2.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page8 - Content1.mp3">
-      <Link>Assets\Page8 - Content1.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="..\..\..\Resources\StJoseph\Audio\Page9 - Content1.mp3">
-      <Link>Assets\Page9 - Content1.mp3</Link>
-    </AndroidAsset>
-  </ItemGroup>
-  <ItemGroup>
     <AndroidResource Include="Resources\drawable-hdpi\splash_logo.png" />
   </ItemGroup>
   <ItemGroup>
@@ -325,6 +235,96 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-xxxhdpi\appicon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page1 - Content1.mp3">
+      <Link>Assets\Page1 - Content1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page1 - Content2.mp3">
+      <Link>Assets\Page1 - Content2.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page2 - Content1.mp3">
+      <Link>Assets\Page2 - Content1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page3 - Content1.mp3">
+      <Link>Assets\Page3 - Content1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page3 - Content2.mp3">
+      <Link>Assets\Page3 - Content2.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page4 - Content1.mp3">
+      <Link>Assets\Page4 - Content1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page4 - Content2.mp3">
+      <Link>Assets\Page4 - Content2.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page4 - Content3.mp3">
+      <Link>Assets\Page4 - Content3.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page4 - Content4.mp3">
+      <Link>Assets\Page4 - Content4.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page4 - Content5.mp3">
+      <Link>Assets\Page4 - Content5.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page4 - Content6.mp3">
+      <Link>Assets\Page4 - Content6.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page5 - Content1.mp3">
+      <Link>Assets\Page5 - Content1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page5 - Content2.mp3">
+      <Link>Assets\Page5 - Content2.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page6 - Content1.mp3">
+      <Link>Assets\Page6 - Content1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page7 - Content1.mp3">
+      <Link>Assets\Page7 - Content1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page7 - Content2.mp3">
+      <Link>Assets\Page7 - Content2.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page8 - Content1.mp3">
+      <Link>Assets\Page8 - Content1.mp3</Link>
+    </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\Resources\StJoseph\Prod\Audio\Page9 - Content1.mp3">
+      <Link>Assets\Page9 - Content1.mp3</Link>
+    </AndroidAsset>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
